Fix body overflow

--- a/less/ucms.less
+++ b/less/ucms.less
@@ -1,4 +1,6 @@
-
+body {
+  overflow: hidden;
+}
 .ucms-contrib-result-inner {
   position: relative;
   overflow: hidden;
